--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -80,3 +80,43 @@ pre {
 	margin: 0;
 }
 
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width:185px;
+}
+
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+.container {
+    padding: 2px 16px;
+}
+
+.rating a {
+   float: right;
+   color: #aaa;
+   text-decoration: none;
+   font-size: 3em;
+   transition: color .4s;
+}
+.rating a:hover,
+.rating a:focus,
+.rating a:hover ~ a,
+.rating a:focus ~ a {
+   color: orange;
+   cursor: pointer;
+}
+
+.ban {
+    background: white url("/images/logo-epimovies.png") no-repeat left;
+    text-align: center;
+    width:800px;
+    height:200px;
+    margin-left:auto;
+    margin-right:auto;
+    border-radius:15px;
+    font-family: "Trebuchet MS", sans-serif;
+    text-decoration:none;
+}
