--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,7 +3,7 @@
  */
 
 body,html {
-	background-color: #3b4b54; width : 100%;
+	//background-color: #3b4b54; width : 100%;
 	height: 100%;
 	margin: 0 auto;
 	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
@@ -105,15 +105,15 @@ pre {
 .rating a:focus,
 .rating a:hover ~ a,
 .rating a:focus ~ a {
-   color: orange;
+   color: blue;
    cursor: pointer;
 }
 
 .ban {
     background-color:white;
     height:200px;
-    border-radius:15px;
-    margin-top:10px;
+    border-radius:5px;
+    margin-top:5px;
     font-family: "Trebuchet MS", sans-serif;
     text-decoration:none;
 }
